# engine

./: .gitignore  CMakeLists.txt  game.txt
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
solado/: CMakeLists.txt  components.h  entity-manager.cpp  entity-manager.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  vector2.cpp  vector2.h
solado/ecs/: CMakeLists.txt
solado/math/: CMakeLists.txt
